feat: update CORS configuration to allow specific origins and methods